style.css
*{
    
}

@font-face {
    font-family: "Neue Haas";
    src: url(./fonts/NeueHaasGrotDisp-45Light-Trial.otf);
}

body{
    font-family: "Neue Haas";
    text-align: left;
    margin: 0;
}

.header, ul, .desc, .subheader, .image_row, .image_with_text, .testimonial, .contact_us, .header_text{
    display: flex;
}

.header, .subheader{
    background-color: #344e41;
    color: #f0ebd8;
}

.header{
    justify-content: space-around;
    align-items: center;
    padding: 16px;
}

.header_text{
    margin: auto;
    width: 1600px;
    justify-content: space-between;
    align-items: center;
}


ul{
    
    justify-content: right;
    gap: 20px;
}

.desc{
    width: 1600px;
    justify-content: space-between;
    margin: auto;
}

.desc_text{
    width: 800px;
}

.subheader{
    justify-content: space-between;
    
    height: 450px;
}


#main_image{
    width: 540px;
    height: auto;
    outline: 2px solid #f0ebd8;
}

#helper{
    height: 60px;
    width: 150px;
}

#helper:hover{
    opacity: 0.8;
}

.image_row{
    justify-content: space-between;
    align-items: center;
    text-align: center;

    width: 1600px;
    height: 300px;

    margin: auto;

    
}
.s2{
    display: flex;
    flex-direction: column;
    height: 1100px;
    background-color: #dad7cd;
}

.s2_title{
    text-align: center;
    margin: auto;

    font-weight: 900;
    color: #344e41;
}

.image_with_text{
    flex-direction: column;
    align-items: center;
    width: 300px;
}

.image_with_text img{
    width: 400px;
    height: auto;
    border: 2px solid #344e41;
    
}

.testimonial{
    flex-direction: column;
    justify-content: center;

    text-align: right;
    color: #344e41;
    
    padding: 32px;
    width: 900px;
    height: 400px;
    margin: auto;
    
}

.s3{
    background-color: #a3b18a;
}

em{
    font-size: 32px;
}

.testimonial h2{
    font-style: italic;
}

.last_section{
    height: 300px;
    background-color: #dad7cd;
    display: flex;
    align-items: center;
    
}
.contact_us{
    background-color: #344e41;
    color: white;
    width: 800px;
    height: 100px;
    
    justify-content: space-between;
    align-items: center;
    margin: auto;

    padding: 32px;
}

.contact_text{
    display: flex;
    flex-direction: column;
}

h1{
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

h2{
    font-size: 36px;
}

h3{
    font-size: 24px;
    color: white;

}

.pt18{
    font-size: 20px;
    color: white;
    font-weight: lighter;
}


button{
    font-family: "Neue Haas";
    font-size: 18px;
    background-color: #344e41;
    color: white;

    width: 125px;
    height: 35px;
    outline: 2px solid white;
    border-radius: 5px;
}



.contact_us, #main_image, .image_with_text img{
    border-radius: 20px;
}

